added pokemon and trainer index and show

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,11 +1,25 @@
 <!-- app/views/pokemons/index.html.erb -->
 
-<div class="container py-4 text-center">
-  <h1 class="display-5 fw-bold mb-4 text-primary">
+<div class="container p-4 text-left">
+  <h1 class="fw-bold mb-4 text-white">
     <i class="fa-solid fa-caret"></i> Pokédex
   </h1>
-
-  <nav class="nav-links">
-    Trainers | Random Pokemon
-  </nav>
+  <h5 class="p-4"><%= link_to "Trainers", trainers_path(), class: "text-warning text-decoration" %></h5>
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <% @pokemons.each do |pokemon| %>
+      <div class="col">
+        <%= link_to pokemon_path(pokemon), class: "text-decoration-none" do %>
+          <div class="card h-100 border-4 border-warning rounded-4 bg-dark">
+            <div class="d-flex justify-content-center mt-3">
+              <%= cl_image_tag pokemon.photo.key, class: "img-fluid object-fit-contain", style: "height: 300px; width: auto;" %>
+            </div>
+            <div class="card-body text-white text-center">
+              <h4 class="card-title"><%= pokemon.name %></h5>
+              <p class="card-text"><%= pokemon.element_type %></p>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
