--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/pokemons/index.html.erb -->
 
-<div class="container p-4 text-left">
-  <h4><%= link_to "< Pokedéx", root_path(), class: "text-warning text-decoration" %></h2>
+<div class="container p-4 text-left trainers-page">
+  <h4><%= link_to "< Pokedéx", root_path(), class: "btn btn-warning border-1 rounded-4 shadow-lg" %></h2>
   <h1 class="fw-bold mb-4 text-white pt-4">
     Let's Get Training
   </h1>
