--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,30 +1,30 @@
 <div class="container p-4 text-left">
-  <h4><%= link_to "< Trainers", trainers_path(), class: "text-warning text-decoration" %></h2>
-  <h1 class="text-white pt-4"><%= @trainer.name %> is going to catch 'em all!</h1>
+  <h4><%= link_to "< Trainers", trainers_path(), class: "btn btn-warning border-1 rounded-4 shadow-lg" %></h2>
   <div class="row">
     <div class="col-md-6 mt-4">
         <div class="card w-100 mt-4 border-4 border-warning rounded-4 bg-dark">
-          <div class="d-flex justify-content-center mt-3">
-            <%= cl_image_tag @trainer.photo.key, width: 100, height: 200, class: "img-fluid" %>
+          <div class="d-flex justify-content-center pt-4">
+            <%= cl_image_tag @trainer.photo.key, class: "img-fluid object-fit-contain", style: "height: 250px; width: auto;" %>
           </div>
-          <div class="card-body text-white text-center">
+          <div class="card-body text-white text-center pb-4">
             <h4 class="card-title"><%= @trainer.name %></h5>
             <p class="card-text"><%= @trainer.age %></p>
           </div>
         </div>
+        <h3 class="text-white pt-4"><%= @trainer.name %> is going to catch 'em all!</h3>
     </div>
     <div class="col-md-6 pt-4">
-      <h2 class="fw-bold mb-4 text-white pt-4">Their Pokémon</h2>
+      <h5 class="fw-bold mb-4 text-white pt-4 text-center"><%= @trainer.name %>'s Pokémons</h5>
       <div class="row row-cols-1 row-cols-md-2 g-4">
           <% @trainer.pokeballs.each do |pokeball| %>
             <div class="col">
-              <div class="card h-100 border-4 border-warning rounded-4 bg-dark">
+              <div class="card h-100 border-4 border-dark rounded-4 bg-light shadow-sm">
                 <div class="d-flex justify-content-center mt-3">
                   <%= cl_image_tag pokeball.pokemon.photo.key, width: 200, height: 300, class: "img-fluid" %>
                 </div>
                 <div class="card-body text-white text-center">
-                  <p class="card-title"><%= pokeball.pokemon.name %></p>
-                  <p class="card-text"><%= pokeball.caught_on %></p>
+                  <p class="card-title text-black"><%= pokeball.pokemon.name %></p>
+                  <p class="card-text text-black"><%= pokeball.caught_on %></p>
                 </div>
               </div>
             </div>
