--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 body {
-  background-color: rgb(6, 53, 100); // Light background color for the home page
+  background-color: rgb(6, 53, 100);
 }
 h1, h2, h3, h4, h5, h6 {
   text-shadow: 1px 1px 2px black;
