--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,11 +1,35 @@
 <div class="container p-4 text-left">
-  <h1 class="fw-bold mb-4 text-white">
-    <i class="fa-solid fa-caret"></i> Pokédex
-  </h1>
-  <h5 class="p-4">
-    <%= link_to "Meet the Trainers >", trainers_path(), class: "btn btn-warning border-1 rounded-4 shadow-lg" %>
-  </h5>
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="fw-bold text-white mb-0">
+      <i class="fa-solid fa-caret"></i> Pokédex
+    </h1>
 
+    <%= link_to "Meet the Trainers >", trainers_path, class: "btn btn-warning border-1 rounded-4 shadow-lg fw-bold" %>
+  </div>
+
+
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <!-- Search bar -->
+    <div class="input-group mb-4">
+      <%= simple_form_for :search, url: root_path, method: :get, local: true do |f| %>
+        <div class="input-group shadow-lg">
+          <%= f.input_field :query, name: "query", placeholder: "Search a Pokémon...", class: "form-control form-control-lg border-warning" %>
+          <button class="btn btn-warning fw-bold px-4" type="submit">Search</button>
+        </div>
+      <% end %>
+    </div>
+    <div class="mb-4 w-100 text-end">
+    <% if params[:query].present? %>
+      <!-- clear button -->
+     <%= link_to "clear", root_path, class: "btn btn-light border-1 rounded-4 shadow-lg fw-bold" %>
+    <% else %>
+      <!-- Random Pokémon button -->
+      <%= link_to "Show random Pokémon >", pokemon_path(@random), class: "btn btn-dark border-3 border-light rounded-4 shadow-lg fw-bold w-75 p-2" %>
+    <% end %>
+    </div>
+  </div>
+
+  <!-- Pokémon Card Grid -->
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <% @pokemons.each do |pokemon| %>
       <div class="col">
